--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,14 +1,8 @@
-header: ""
-text: ""
+header: "Contact DHRI"
+main-text: "<p class=\"lead\">Situated at the heart of Manhattan in New York City, adjacent to the Morgan Library and Museum, and only seven short blocks from the New York Public Library’s Stephen A. Schwarzman Building, The Digital Humanities Research Institute's offices are located at The Graduate Center, CUNY.</p>"
 address: "365 Fifth Avenue, New York, NY"
+gc-map: true
+email-form: true
 email:
-  - name: ""
-    role: ""
-    address: ""
-  - name: ""
-    role: ""
-    address: ""
-phone:
-  - name: ""
-    role: ""
-    number: ""
+  - short: kallewesterling
+  - short: lisarhody
