--- a/_data/people.yml
+++ b/_data/people.yml
@@ -268,3 +268,149 @@ faculty:
     img: julia-rodas.png
     website: juliamielerodas.com
     alumni: true
+
+community-leaders:
+
+  - first-name: Dianne
+    last-name: Fallon
+    short: diannefallon
+    title: ME.Digital Humanities Institute
+    bio: "Dr. Dianne Fallon is the English Department Chair at York County Community College. Currently, she is involved with integrating more digital tools into English and Humanities classes, both to stimulate interest in humanities subjects and to boost student confidence in using digital technologies. At York County Community College, Dianne teaches a variety of writing courses, including College Composition, Creative Writing and Creative Non-Fiction, as well as Humanities courses such as Multicultural America. In spring 2019, she will teach a new course, \"Witches and War, on the Web\", in which students will investigate the connection between the Salem Witch trials and Abenaki-colonial warfare in Maine, and will develop their own local history research and digital presentation projects."
+    img: dianne-fallon.jpg
+    website: 
+    alumni: false
+
+  - first-name: Nancy
+    last-name: Um
+    short: nancyum
+    title: Binghamton DHRI
+    bio: "Nancy Um is Professor in the Department of Art History and co-director of the Middle East and North Africa Studies Program at Binghamton University. Her research explores the Islamic world from the perspective of the coast, with a focus on material, visual, and built culture on the Arabian Peninsula and around the rims of the Red Sea and the Indian Ocean. She is the author of <em>The Merchant Houses of Mocha: Trade and Architecture in an Indian Ocean Port</em> (University of Washington Press, 2009) and <em>Shipped but not Sold: Material Culture and the Social Protocols of Trade during Yemen’s Age of Coffee</em> (University of Hawai’i Press, 2017). She recently co-edited (with Carrie Anderson), \"Coordinates: Digital Mapping and 18th-C Visual, Material and Built Cultures,\" <em>Journal18: a journal of eighteenth-century art and culture</em> (Spring 2018)."
+    img: nancy-um.jpg
+    website: 
+    alumni: false
+    
+  - first-name: Amy
+    last-name: Gay
+    short: amygay
+    title: Binghamton DHRI
+    bio: "Amy Gay recently joined Binghamton University Libraries as their first Digital Scholarship Librarian, where she is leading the implementation of digital scholarship initiatives for the Libraries, works to help strengthen programs related to digital scholarship services, and supports and serves as a resource to faculty developing digital scholarship projects. Before coming to Binghamton University, Amy was part of the National Digital Stewardship Residency (NDSR) D.C. cohort in 2016, which is administered by the Library of Congress and funded by the Institute of Museum and Library Services. During this time, she managed projects at the U.S. Food & Drug Administration that focused on enabling open science, including the creation of a publicly searchable science data catalog for the Office of Science and Engineering Laboratories within the Center for Devices and Radiological Health. She received her MLIS from Syracuse University, and her research interests include primary source literacy, interactive technology and pedagogy, war history and cultural heritage preservation. In her free time, Amy enjoys attending trivia nights, hiking along the Upstate gorges, and trying out local eateries and diners."
+    img: amy-gay.png
+    website: 
+    alumni: false
+    
+  - first-name: Daniel
+    last-name: Johnson
+    short: danieljohnson
+    title: DHRI South Bend
+    bio: "Daniel Johnson is subject specialist for English literature and digital humanities at the University of Notre Dame's Hesburgh Libraries System. He has graduate degrees in English from Wake Forest University (MA) and Princeton University (PhD), where he specialized in literature of the long eighteenth-century."
+    img: daniel-johnson.jpg
+    website: 
+    alumni: false
+    
+  - first-name: Sarah
+    last-name: Noonan
+    short: sarahnoonan
+    title: DHRI South Bend
+    bio: "Sarah Noonan received her Ph.D. in medieval English literature from Washington University in St. Louis. As an Assistant Professor at Saint Mary’s College, she teaches courses in early British literature, book history, and the history of the English language. She is the author of essays on manuscript studies, medieval reading practices, devotional literature, and pedagogical practice. She is currently working on a project entitled “Peripheral Manuscripts” that seeks to assist non-R1, manuscript-holding institutions in digitizing their respective holdings and displaying them in a collective digital repository in order to increase that material’s visibility among the scholarly community."
+    img: sarah-noonan.png
+    website: 
+    alumni: false
+
+  - first-name: Marion
+    last-name: McGee
+    short: 
+    title: Digital Humanities Afrofuturism Workshop at Association of African American Museums annual conference
+    bio: "Marion “Missy” McGee is a servant leader who believes in creative problem solving through the embrace of failure, experimentation and innovation. Marion is on the Association of African American Museums (AAAM) Board of Directors where she chairs the Communications Committee. She also serves as a Museum Program Specialist in the Office of Strategic Partnerships at the National Museum of African American History and Culture (NMAAHC). She is responsible for the design, implementation and evaluation of key collaborative initiatives, multi-state programs for the only national museum congressionally mandated to strengthen and elevate the profile of African American museums, Historically Black Colleges and Universities, and other institutions promoting the study or appreciation of African American history and African diaspora cultural heritage in the United States. She is currently pursuing a PhD in Leadership and Change to investigate methods of preserving the leadership legacy of Black Museum Movement pioneers. As a scholar-practitioner, Marion is working to identify best practices for advancing, growing and sustaining organizations founded by or on behalf of persons of African descent. Her areas of expertise include long-term strategic planning and prudent financial management through participatory leadership."
+    img: marion-mcgee.png
+    website: 
+    alumni: false
+    
+  - first-name: Erika
+    last-name: Gault
+    short: erikagault
+    title: Africana DHi 2019
+    bio: "Erika Gault is an Assistant Professor of Africana Studies at the University of Arizona. Erika Gault’s scholarly work focuses on the intersection of religious history, technology, and urban black life in post-industrial America.On the topic of hip hop, religion, and digital ethnography she has delivered and published a number of papers regionally, nationally, and internationally. She is an ordained elder at Elim Christian Fellowship in Buffalo, NY and an award winning slam poet. She is currently working on her first book project titled <em>Being Christian, Doin' Hip Hop: A Digital Ethnography of Black Millennial Christianity</em> and a co-edited volume entitled <em>You Gon' Learn Today: The Aesthetics of Christians in Hip Hop</em>."
+    img: erika-gault.jpg
+    website: 
+    alumni: false
+
+  - first-name: Frances
+    last-name: McDonald
+    short: francesmcdonald
+    title: Digital Humanities Research Institute at University of Louisville
+    bio: "Frances McDonald is Assistant Professor of English at the University of Louisville where she works on critical theory and twentieth-century American literature and film. Her current book project examines the textual forms that laughter takes in twentieth-century literature and philosophy. Her work has appeared in <em>American Literature</em>, <em>LA Review of Books</em>, and <em>The Atlantic</em>, among other venues. She is also the co-editor and co-designer of <em>thresholds</em>, an occasional digital zine for creative/critical scholarship."
+    img: fran-mcdonald.jpg
+    website: 
+    alumni: false
+
+  - first-name: Sophia
+    last-name: Geng
+    short: sophiageng
+    title: Digital Technologies Conference at College of Saint Benedict and Saint John's University
+    bio: "Growing up in Shandong, China, Dr. Sophia Geng obtained her MA from Beijing Foreign Studies University and her Ph.D. from the University of Minnesota-Twin Cities, U.S.A. Dr. Geng’s academic interests lie in oral history, the safeguarding of cultural heritage and East Asian literature. Joining the College of Saint Benedict and Saint John’s University (CSB/SJU) in 2007, Dr. Geng currently is an Associate Professor at the Department of Languages and Cultures. She also served as the Director of the Asian Studies Program from 2013 to 2017. CSB/SJU are two top-ranked liberal arts colleges in Minnesota, U.S.A., that share an integrated academic partnership. With a combined enrollment of 4,000 students, CSB/SJU are the largest liberal arts colleges in the U.S."
+    img: sophia-geng.png
+    website: 
+    alumni: false
+    
+  - first-name: Alicia
+    last-name: Peaker
+    short: aliciapeaker
+    title: Tri-Co DHRI
+    bio: "Alicia Peaker (PhD, Northeastern University) is the Digital Scholarship Specialist at Bryn Mawr College. Previously, she completed a CLIR/DLF Mellon Postdoctoral Fellowship in the Digital Liberal Arts at Middlebury College. While in graduate school, she served as the Co-Director of <em>Our Marathon: The Boston Bombing Digital Archive</em>, which won an award as the Best DH Project for Public Audiences in 2013. She has also worked as the Project Manager for The Women Writers Project and as the Managing Editor for <em>GradHacker</em>, a collaborative blog published through <em>Inside Higher Ed</em>. Her current research project explores ways of visualizing the botanical worlds of novels."
+    img: alicia-peaker.jpg
+    website: 
+    alumni: false
+
+  - first-name: Rosín
+    last-name: Torres
+    short: rosintorres
+    title: Evangelical Seminary of Puerto Rico DHRI
+    bio: "Rosín Torres-Medina is a Professional Librarian at Juan De Valdes Library of the Evangelical Seminary of Puerto Rico (SEPR) after graduating from the University of Puerto Rico. Her Master's capstone project explored open journals system technology. She has attended continued education workshops in transdisciplinary research, editing scientific journals in electronic format, and technology for online education. She is mostly passionate in collaborating and promoting learning of library resources such as the OPAC, the databases, Mendeley reference manager, digital tools and skills among faculty and students. She is engaged in promoting collaboration and open access projects at the library and regularly participate in workshops and courses around the latest research techniques and enhancement of research and writing skills. Academically, she is interested in Digital Humanities, in the areas of Bible and religion. Her career revolves around technology, as she loves to inspire change as a means for challenge and opportunities. The capacity of libraries to help people achieve their common and academic goals has always been an interest of hers."
+    img: rosa-maria-torres.png
+    website: 
+    alumni: false
+
+  - first-name: Nathan
+    last-name: Kelber
+    short: nathankelber
+    title: Triangle Digital Humanities Institute
+    bio: "Nathan Kelber is the Digital Scholarship Specialist at the University Libraries, University of North Carolina at Chapel Hill. He comes from Detroit where he worked as a professor, public historian, and community organizer. Kelber is most well-known for his work on Detroit 67, a citywide campaign to commemorate the 1967 Detroit Uprising and encourage racial harmony, as well as his other project Network Detroit, a regional digital humanities conference. At UNC, Kelber helps faculty and graduate students with digital projects and serves as a library point of contact for local digital humanities communities and initiatives."
+    img: nathan-kelber.jpg
+    website: 
+    alumni: false
+
+  - first-name: Rico
+    last-name: Chapman
+    short: ricochapman
+    title: Digital Humanities Graduate Course at Clark Atlanta University
+    bio: "Dr. Rico D. Chapman received his PhD in African Studies from Howard University. He is currently an Associate Professor of History at Clark Atlanta University. He also serves as Assistant Dean of the School of Arts and Sciences and Director of the Humanities PhD program. His most recent book is titled <em>Student Resistance to Apartheid at the University of Fort Hare: Freedom Now, A Degree Tomorrow</em> (Lexington, 2016)."
+    img: rico-chapman.jpg
+    website: 
+    alumni: false
+
+  - first-name: Rafia
+    last-name: Mirza
+    short: rafiamirza
+    title: DHRI at SMU
+    bio: "Rafia Mirza is a Humanities Research Librarian at SMU. She received her MSI from the University of Michigan. Her research interests include digital humanities, digital project planning, and issues around labor and community in digital humanities and digital pedagogy."
+    img: rafia-mirza.jpg
+    website: 
+    alumni: false
+
+  - first-name: Andrea
+    last-name: Davis
+    short: andreadavis
+    title: DHRI@A-State
+    bio: "Andrea Davis is Assistant Professor of Modern European and Digital History at Arkansas State University. Her research examines the urban social movements and memory cultures of twentieth century Spain, and has been supported by the the Fulbright Foundation and the University of California Humanities Network, among others. In addition to her position at the university, Andrea currently serves as the Associate Director of the Spanish Civil War Memory Project: Audiovisual Archive of the Francoist Repression and the book review editor of the <em>Bulletin for Spanish and Portuguese Historical Studies</em>."
+    img: andrea-davis.jpg
+    website: 
+    alumni: false
+
+  - first-name: Alexandra
+    last-name: Sarkozy
+    short: alexandrasarkozy
+    title: Wayne State University DHRI
+    bio: "Alexandra Sarkozy is a science and digital scholarship librarian at Wayne State University in Detroit, MI. She has been working with faculty and librarians to incorporate digital tools into humanities classrooms, and to build digital infrastructure for humanities computing within the library. She is a also a graduate student in American History at Wayne State University. Her research interests include history of medicine, historical mapping, and data sharing and preservation."
+    img: alexandra-sarkozy.jpg
+    website: 
+    alumni: false
