updates to the apply page

--- a/_data/apply-2020-faq.yml
+++ b/_data/apply-2020-faq.yml
@@ -1,3 +1,5 @@
+- q1: "Where can I find the application form?"
+  a:  '<p><a href="http://bit.ly/apply-to-dhri" target="_blank">The application form is available here.</a></p>'
 - q1: "Who do you envision applying for the DHRI?"
   a: "<p>We have outlined a couple of case studies to help identify the participants that we are looking for:</p>
       <ul>
