changing around in the partners area

--- a/_data/megamenu.yml
+++ b/_data/megamenu.yml
@@ -26,7 +26,7 @@
       link: /people/alumni/
 
 - header: Partners
-  link: /partners/
+  link: /partners/neh/
   items:
     - header: NEH
       link: /partners/neh/
