--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,5 +1,7 @@
 header: "Contact DHRI"
-main-text: 
+main-text: '<p class="lead">Below, you will find a way to contact us using our email form, and where we are physically located. You should also follow <a href="https://www.twitter.com/dhinstitutes" class="text-light">our Twitter account</a> where we regularly post updates about the project.</a></p>
+            <p class="text-center"><a href="https://twitter.com/dhinstitutes?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @dhinstitutes</a></p>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>'
 address: "365 Fifth Avenue, New York, NY"
 gc-map: true
 gc-map-header: "Find Us"
